<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:text="Log In"
        android:textColor="@color/greenBtnColor"
        android:fontFamily="@font/poppinsbold"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/img_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Username"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_account_circle_24"
            android:layout_marginBottom="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_stylesuperrounded"
            android:backgroundTint="#5DB075"
            android:text="Login" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="Don’t have an account ?"
            android:textColor="@color/black"

             />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Sign Up"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="20dp"
            android:textColor="@color/teal_700"
            />

        </LinearLayout>

    <include
    android:id="@+id/layout_loading"
    layout="@layout/layout_loading"
    android:visibility="gone"
    />





</androidx.constraintlayout.widget.ConstraintLayout>