<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tvSignUp"
        android:textColor="@color/greenBtnColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="Sign Up"
        android:fontFamily="@font/poppinsbold"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:hint="Username"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_user_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:hint="Password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:hint="Email"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTanggalLahir"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tanggal Lahir"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_date_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNoTelpon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nomor Telepon"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_noTelpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_style"
                android:backgroundTint="#F6F6F6"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/et_stylesuperrounded"
            android:backgroundTint="#5DB075"
            android:text="SignUp" />

    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>